--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^10.4.0",
+    "cypress-grep": "^3.0.2",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.2.0",
     "cypress-multi-reporters": "^1.6.1",
